--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gerador de Padrões de Design</title>
+    <link rel="icon" href="data:image/svg+xml,%3Csvg id='Camada_2' data-name='Camada 2' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 317.89 317.89'%3E%3Cdefs%3E%3Cstyle%3E.cls-1%7Bfill:%234444e1;%7D%3C/style%3E%3C/defs%3E%3Cg id='Camada_1-2' data-name='Camada 1'%3E%3Cpath class='cls-1' d='M240.42,317.89c-20.7,0-40.15-8.06-54.79-22.7-14.63-14.63-22.69-34.09-22.69-54.78,0-47.13-38.34-85.47-85.47-85.47-20.69,0-40.14-8.06-54.78-22.69C8.06,117.62,0,98.17,0,77.47S8.06,37.32,22.69,22.69C37.33,8.06,56.78,0,77.47,0c42.72,0,77.47,34.75,77.47,77.47,0,22.83,8.89,44.3,25.03,60.44s37.62,25.03,60.45,25.03c42.72,0,77.47,34.75,77.47,77.47,0,20.7-8.06,40.15-22.69,54.78-14.64,14.64-34.09,22.7-54.78,22.7Z'/%3E%3C/g%3E%3C/svg%3E" type="image/svg+xml">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
