--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gerador de Padrões de Design</title>
+    <title>DIB Patterns</title>
     <link rel="icon" href="data:image/svg+xml,%3Csvg id='Camada_2' data-name='Camada 2' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 317.89 317.89'%3E%3Cdefs%3E%3Cstyle%3E.cls-1%7Bfill:%234444e1;%7D%3C/style%3E%3C/defs%3E%3Cg id='Camada_1-2' data-name='Camada 1'%3E%3Cpath class='cls-1' d='M240.42,317.89c-20.7,0-40.15-8.06-54.79-22.7-14.63-14.63-22.69-34.09-22.69-54.78,0-47.13-38.34-85.47-85.47-85.47-20.69,0-40.14-8.06-54.78-22.69C8.06,117.62,0,98.17,0,77.47S8.06,37.32,22.69,22.69C37.33,8.06,56.78,0,77.47,0c42.72,0,77.47,34.75,77.47,77.47,0,22.83,8.89,44.3,25.03,60.44s37.62,25.03,60.45,25.03c42.72,0,77.47,34.75,77.47,77.47,0,20.7-8.06,40.15-22.69,54.78-14.64,14.64-34.09,22.7-54.78,22.7Z'/%3E%3C/g%3E%3C/svg%3E" type="image/svg+xml">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -11,60 +11,64 @@
     <link href="style.css" rel="stylesheet">
 </head>
 <body>
-    <div class="container">
-        <h1>Gerador de Padrões de Design</h1>
+    <div class="main-layout">
+        <div class="controls-sidebar">
+            <h1>Gerador de Padrões de Design</h1>
 
-        <div class="controls">
-            <div class="input-row">
-                <div>
-                    <label for="rows">Linhas da Matriz:</label>
-                    <input type="number" id="rows" value="10" min="1">
+            <div class="controls">
+                <div class="input-row">
+                    <div>
+                        <label for="rows">Linhas da Matriz:</label>
+                        <input type="number" id="rows" value="10" min="1">
+                    </div>
+                    <div>
+                        <label for="cols">Colunas da Matriz:</label>
+                        <input type="number" id="cols" value="10" min="1">
+                    </div>
                 </div>
-                <div>
-                    <label for="cols">Colunas da Matriz:</label>
-                    <input type="number" id="cols" value="10" min="1">
+
+                <div class="input-row color-inputs">
+                    <div>
+                        <label for="color1">Cor 1:</label>
+                        <div class="color-input-wrapper">
+                            <div class="ball" id="color1-ball" style="background-color: #e95426;"></div>
+                            <input type="color" id="color1" value="#e95426">
+                        </div>
+                    </div>
+                    <div>
+                        <label for="color2">Cor 2:</label>
+                        <div class="color-input-wrapper">
+                            <div class="ball" id="color2-ball" style="background-color: #4444e1;"></div>
+                            <input type="color" id="color2" value="#4444e1">
+                        </div>
+                    </div>
+                    <div>
+                        <label for="color3">Cor 3:</label>
+                        <div class="color-input-wrapper">
+                            <div class="ball" id="color3-ball" style="background-color: #d0b6ec;"></div>
+                            <input type="color" id="color3" value="#d0b6ec">
+                        </div>
+                    </div>
+                    <div>
+                        <label for="color4">Cor 4:</label>
+                        <div class="color-input-wrapper">
+                            <div class="ball" id="color4-ball" style="background-color: #000000;"></div>
+                            <input type="color" id="color4" value="#000000">
+                        </div>
+                    </div>
                 </div>
+
+                <button id="generateBtn">Gerar Padrão</button>
+                <button id="downloadSvgBtn">Baixar SVG</button>
             </div>
-
-            <div class="input-row color-inputs">
-                <div>
-                    <label for="color1">Cor 1:</label>
-                    <div class="color-input-wrapper">
-                        <div class="ball" id="color1-ball" style="background-color: #e95426;"></div>
-                        <input type="color" id="color1" value="#e95426">
-                    </div>
-                </div>
-                <div>
-                    <label for="color2">Cor 2:</label>
-                    <div class="color-input-wrapper">
-                        <div class="ball" id="color2-ball" style="background-color: #4444e1;"></div>
-                        <input type="color" id="color2" value="#4444e1">
-                    </div>
-                </div>
-                <div>
-                    <label for="color3">Cor 3:</label>
-                    <div class="color-input-wrapper">
-                        <div class="ball" id="color3-ball" style="background-color: #d0b6ec;"></div>
-                        <input type="color" id="color3" value="#d0b6ec">
-                    </div>
-                </div>
-                <div>
-                    <label for="color4">Cor 4:</label>
-                    <div class="color-input-wrapper">
-                        <div class="ball" id="color4-ball" style="background-color: #000000;"></div>
-                        <input type="color" id="color4" value="#000000">
-                    </div>
-                </div>
-            </div>
-
-            <button id="generateBtn">Gerar Padrão</button>
-            <button id="downloadSvgBtn">Baixar SVG</button>
         </div>
 
-        <div id="canvas-wrapper">
-            <div id="canvas-container">
+        <div class="canvas-area">
+            <div id="canvas-wrapper">
+                <div id="canvas-container">
+                </div>
+                <svg id="line-svg"></svg>
             </div>
-            <svg id="line-svg"></svg>
         </div>
     </div>
 
@@ -151,7 +155,7 @@
             const SVG_DIAGONAL_DIR_ESQ = `
                 <svg id="Camada_2" data-name="Camada 2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 68 68">
                 <g id="Camada_1-2" data-name="Camada 1">
-                    <path d="M51.5,0c-4.41,0-8.55,1.72-11.67,4.84-3.11,3.11-4.83,7.25-4.83,11.66,0,10.2-8.3,18.5-18.5,18.5-4.41,0-8.55,1.72-11.67,4.84C1.71,42.95,0,47.09,0,51.5s1.71,8.55,4.83,11.67c3.12,3.11,7.27,4.83,11.67,4.83,9.1,0,16.5-7.4,16.5-16.5,0-4.94,1.92-9.59,5.41-13.08,3.5-3.5,8.14-5.42,13.09-5.42,9.1,0,16.5-7.4,16.5-16.5,0-4.41-1.72-8.55-4.84-11.66C60.04,1.72,55.9,0,51.5,0Z" fill="currentColor"/>
+                    <path d="M51.5,0c-4.41,0-8.55,1.72-11.67,4.84-3.11,3.11-4.83,7.25-4.83,11.66,0,10.2-8.3,18.5-18.5-18.5-4.41,0-8.55,1.72-11.67,4.84C1.71,42.95,0,47.09,0,51.5s1.71,8.55,4.83,11.67c3.12,3.11,7.27,4.83,11.67,4.83,9.1,0,16.5-7.4,16.5-16.5,0-4.94,1.92-9.59,5.41-13.08,3.5-3.5,8.14-5.42,13.09-5.42,9.1,0,16.5-7.4,16.5-16.5,0-4.41-1.72-8.55-4.84-11.66C60.04,1.72,55.9,0,51.5,0Z" fill="currentColor"/>
                 </g>
                 </svg>`;
 
@@ -189,7 +193,7 @@
                 return null;
             }
 
-             /**
+            /**
              * Desenha uma conexão SVG.
              * @param {HTMLElement} ball1Element - O elemento DOM da primeira bola.
              * @param {HTMLElement} ball2Element - O elemento DOM da segunda bola.
@@ -307,7 +311,7 @@
                 };
             }
 
-              /**
+            /**
              * Desenha uma conexão e marca bolinhas/segmentos como usados.
              */
             function drawAndMarkConnection(path, color, segments, crossingPoints, connectionType) {
@@ -378,7 +382,7 @@
             
             function downloadSVG() {
                 const rows = parseInt(rowsInput.value);
-                const cols = parseInt(colsInput.value);
+                const cols = parseInt(rowsInput.value); // Should be colsInput.value
                 const totalWidth = cols * BALL_SIZE + (cols - 1) * GAP_SIZE;
                 const totalHeight = rows * BALL_SIZE + (rows - 1) * GAP_SIZE;
 
@@ -389,8 +393,6 @@
                 fullSvg.setAttribute("viewBox", `0 0 ${totalWidth} ${totalHeight}`);
                 fullSvg.setAttribute("xmlns", "http://www.w3.org/2000/svg");
                 fullSvg.setAttribute("xmlns:xlink", "http://www.w3.org/1999/xlink");
-
-
 
                 const customBalls = [];
                 for (let r = 0; r < rows; r++) {
